Change S3 access keys

--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,3 +1,3 @@
-access_key_id: AKIAIUCFWS27YSLDKOIA
-secret_access_key: F5QNCrRH6oPcsAI7JkVL6gWSJv0epw5cjMJMMj0
+access_key_id: AKIAJOV43245EPVL7RNQ
+secret_access_key: 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
 bucket: binneybucket
